--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,147 @@
-.container {
-  padding: 0 2rem;
+
+
+
+.ImageBackground{
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("../public/image/pexels-harry-cooke-6805932.jpg");
+  background-position: center;
+  background-size: cover;
+  position: absolute;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.ImageBackgroudCat{
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("../public/image/b8t.jpg");
+  background-position: center;
+  background-size: cover;
+  position: fixed;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+
+.ImageBackgroudUpload{
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("../public/image/james-sutton-dQ5G0h7sLno-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.FormBox {
+  width: 380px;
+  height: 600px;
+  position: relative;
+  margin: 6% auto;
+  background: #fff;
+  padding: 5px;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.FormBoxProfile {
+  width: 380px;
+  height: 480px;
+  position: relative;
+  margin: 6% auto;
+  background: #fff;
+  padding: 5px;
+  border-radius: 20px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.button{
+  width: 220px;
+  margin:  35px auto;
+  position: relative;
+  box-shadow: 0 0 20px 9px #9C9EFE;
+  border-radius: 30px;
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.toggle {
+  padding: 10px 30px;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  outline: none;
+  position: relative;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.BoxText {
+  width: 280px;
+  text-align: center;
+  height: 45px;
+  border-bottom: 1px solid rgb(189, 184, 184);
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+#btns {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background: linear-gradient(to right,#9C9EFE,#B1E1FF);
+  border-radius:30px;
+  transition: .5s;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+#login{
+  left: 50%;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.textInfo{
+  margin-bottom: 10px;  
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.inputGroud{
+  top: 180px;
+  position: absolute;
+  width: 280px;
+  transition: 0.5s;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.inputFiled {
+  width: 100%;
+  padding: 10px 0;
+  margin: 5px 0;
+  border-left: 0;
+  border-top: 0;
+  border-right: 0;
+  border-bottom: 1px solid #999;
+  outline: none;
+  background: transparent;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.btnSubmit{
+  width: 85%;
+  margin-top: 20px;
+  padding: 10px 30px;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  background: linear-gradient(to right,#B1E1FF,#9C9EFE);
+  outline: none;
+  border-radius: 25px;
+  border: none;
+  opacity: 0.7;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.btnSubmit:hover {
+  transition: 0.5s ease-out;
+  opacity: 1;
+}
+
+#login {
+ margin-left: 50px;
+}
+
+#register {
+  margin-left: 450px;
+}
+
+
+.TextLabel {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: white;
+  padding: 10px;
 }
